--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "remark-gfm": "^4.0.1",
     "swr": "^2.3.3",
     "tailwind-scrollbar": "^4.0.2",
+    "uuid": "^11.1.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
